--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ace.demo</groupId>
 	<version>1.0.0</version>
-	<artifactId>hello.ace</artifactId>
+	<artifactId>show-app-id</artifactId>
 	<packaging>war</packaging>
 	<name>hello ace demo</name>
 
@@ -32,12 +32,6 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j_version}</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.code.simple-spring-memcached</groupId>
-			<artifactId>spymemcached</artifactId>
-			<version>2.8.4</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
